# SmarWattBakenbot

./: .gitignore  ANALISIS_Y_PLAN_DE_MEJORA.md  CI_CD_FIX_INSTRUCTIONS.md  DOCUMENTACION_SISTEMA_SMARWATT.md  auto-save-continuo.bat  auto-save-total.bat  auto-save.bat  bigquery_queries.txt  cd  debug_conversations.py  debug_query.py  response.json  tabla_extraction.txt  tabla_unificacion_map.md
.github/: CONFIGURACION_SECRETS.md
.github/workflows/: auto-deploy-production.yml  deploy-energy-ia-api.yml  deploy-expert-bot-api.yml
ACTUALIZAR TARIFAS ESIOS/: comprehensive_verification_report.json  install.sh  requirements.txt  verification_report.json
COPIAS DESPLIEGE/energy_ia_api_COPY/: Dockerfile
COPIAS DESPLIEGE/expert_bot_api_COPY/: .env.example  pyproject.toml
COPIAS DESPLIEGE/expert_bot_api_COPY/app/: __init__.py  tariff_recommender.py
COPIAS DESPLIEGE/expert_bot_api_COPY/app/services/: ai_confidence_calculator.py
DOCUMENTACION Y SCRPT/: EXPLICACION_FACIL_ENDPOINTS_ENLACES.md  RESUMEN_VERIFICACION_FINAL.md
DOCUMENTACION Y SCRPT/ANALIZAR_CODIGO_BIGQUERY/: VERIFICACION_FLUJO_COMPLETO.json  reparador_automatico.py
DOCUMENTACION Y SCRPT/IMPORTANTE_20_07_2025/: COMANDOS_1_LINEA.MD  UNIFICAR.MD  coleccion_users.md
DOCUMENTACION Y SCRPT/INTEGRACION ENDOPOIN  REALES BAKEN Y FRONTEN/: ENDPOINT_admin_tariffs_add.md
DOCUMENTACION Y SCRPT/logs/: ANALISIS_PROBLEMAS_COMPLETO.md  (+10 more)
docs/: enhanced_api_analysis.json
energy_ia_api_COPY/: .env  FIX_APPLICATION_CONTEXT.md  markdown_generator.py  requirements.txt
expert_bot_api_COPY/: .env  FIX_DATETIME_JSON_SERIALIZATION.md  requirements.txt
simulador_entrenamiento_ia/: requirements.txt
(+7541 files in other folders)
