# smarwatt-auth-library/pyproject.toml
# ðŸ¢ CONFIGURACIÃ“N EMPRESARIAL PARA LIBRERÃA DE AUTENTICACIÃ“N SMARWATT

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "expert-bot-api"
version = "1.0.0"
description = "Expert Bot API para SmarWatt"
authors = [
    {name = "SmarWatt Enterprise Team", email = "dev@smarwatt.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "Flask>=2.3.0",
    "firebase-admin>=6.2.0",
    "google-auth>=2.22.0",
    "google-oauth2-tool>=0.0.3",
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
    "redis>=4.6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools]
packages = ["smarwatt_auth"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.mypy]
python_version = "3.8"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
